Fix: upload parameter fixed.

--- a/File-Sharing/Views/Document/Upload.cshtml
+++ b/File-Sharing/Views/Document/Upload.cshtml
@@ -8,7 +8,7 @@
 <form asp-controller="Document" asp-action="Upload" enctype="multipart/form-data">
 
     <label asp-for="File">File Upload</label>
-    <input asp-for="File" type="file"/>
+    <input asp-for="File" itemid="1" type="file"/>
 
     <button>Submit</button>
 
