--- a/File-Sharing/Views/User/Register.cshtml
+++ b/File-Sharing/Views/User/Register.cshtml
@@ -7,23 +7,33 @@
 }
 
 
-<form asp-controller="User" asp-action="Register" method="post">
-    <label asp-for="Name">User Name</label>
-    <input asp-for="Name" type="text" required/>
-    <span asp-validation-for="Name" class="text-danger"></span>
+<form asp-controller="User" asp-action="Register" method="post" class="form">
+    <div class="form-row">
+        <label asp-for="Name">User Name</label>
+        <input asp-for="Name" type="text" required />
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
 
-    <label asp-for="Email">Email</label>
-    <input asp-for="Email" type="email" required/>
-    <span asp-validation-for="Email" class="text-danger"></span>
+    <div class="form-row">
+        <label asp-for="Email">Email</label>
+        <input asp-for="Email" type="email" required />
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
 
-    <label asp-for="Password">Enter Your Password</label>
-    <input asp-for="Password" id="password" type="password" required>
+    <div class="form-row">
+        <label asp-for="Password">Enter Your Password</label>
+        <input asp-for="Password" id="password" type="password" required>
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
 
-    <label asp-for="ConfirmPassword">Enter Your Password Again</label>
-    <input asp-for="ConfirmPassword" id="password-validate" type="password" required>
-    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+    <div class="form-row">
+        <label asp-for="ConfirmPassword">Enter Your Password Again</label>
+        <input asp-for="ConfirmPassword" id="password-validate" type="password" required>
+        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+    </div>
 
-    <button>Register</button>
-
+    <div class="form-row">
+        <button>Register</button>
+    </div>
 
 </form>
