new: Account Controller

--- a/File-Sharing/Views/Account/Register.cshtml
+++ b/File-Sharing/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<form asp-controller="User" asp-action="Register" method="post" class="form">
+<form asp-controller="Account" asp-action="Register" method="post" class="form">
     <div class="form-row">
         <label asp-for="Name">User Name</label>
         <input asp-for="Name" type="text" required />
