--- a/File-Sharing/Views/Shared/_Navbar.cshtml
+++ b/File-Sharing/Views/Shared/_Navbar.cshtml
@@ -19,7 +19,7 @@
                 <li><a class="nav-button" href="#">My Files</a></li> 
                 <li><a class="nav-button" href="#">Shared</a></li> 
                 <li><a class="nav-button" href="#">Friends</a></li> 
-                <li><a class="nav-button" href="#">Upload</a></li> 
+                <li><a class="nav-button" asp-controller="Document" asp-action="Upload">Upload</a></li> 
 
   
 
