--- a/File-Sharing/Views/Document/Upload.cshtml
+++ b/File-Sharing/Views/Document/Upload.cshtml
@@ -5,11 +5,29 @@
 @{
 }
 
-<form asp-controller="Document" asp-action="Upload" enctype="multipart/form-data">
-
+<form asp-controller="Document" asp-action="Upload" enctype="multipart/form-data" class="form">
+    <div class="form-row">
+    <h4>Your Upload Quota is: </h4>
+    </div>
+    <div class="form-row">
     <label asp-for="File">File Upload</label>
-    <input asp-for="File" itemid="1" type="file"/>
-
-    <button>Submit</button>
+    <br />
+    <input asp-for="File" id="File" type="file"/>
+    </div>
+    <div>
+             <p id="GFG_DOWN" style=
+        "color:green; font-size: 1em; font-weight: bold;">
+    </p>
+    </div>
+    
+    <div class="form-row">
+        <button>Upload</button>
+    </div>
 
 </form>
+
+    <script>
+        $('#File').on('change', function() {
+            $('#GFG_DOWN').text("Your File size is: "+(this.files[0].size / 1024 / 1024).toFixed(2) + " MB");
+        });
+    </script>
