Friendship, request, accept, delete friend and simpe html pages

--- a/File-Sharing/Views/Shared/_Navbar.cshtml
+++ b/File-Sharing/Views/Shared/_Navbar.cshtml
@@ -18,7 +18,7 @@
                 <li><a class="nav-button" href="#">Inbox</a></li>
                 <li><a class="nav-button" href="#">My Files</a></li> 
                 <li><a class="nav-button" href="#">Shared</a></li> 
-                <li><a class="nav-button" href="#">Friends</a></li> 
+                <li><a class="nav-button" asp-controller="Friendship" asp-action="Index">Friends</a></li> 
                 <li><a class="nav-button" asp-controller="Document" asp-action="Upload">Upload</a></li> 
 
   
