--- a/File-Sharing/Views/Document/Upload.cshtml
+++ b/File-Sharing/Views/Document/Upload.cshtml
@@ -1,8 +1,8 @@
 ﻿@model File_Sharing.Models.UploadFile
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
 @{
+            ViewData["Title"] = "Upload File";
+
 }
 
 <form asp-controller="Document" asp-action="Upload" enctype="multipart/form-data" class="form">
