--- a/File-Sharing/Views/Friendship/SendRequest.cshtml
+++ b/File-Sharing/Views/Friendship/SendRequest.cshtml
@@ -1,20 +1,24 @@
 ﻿@model File_Sharing.Models.FriendshipRequest
 
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
+    ViewData["Title"] = "Send Friendship Request";
 }
+
+@Html.Partial("_Sidebar")
+
+<div class="side-bar-content">
+
+
 
 <form asp-controller="Friendship" asp-action="SendRequest" method="post">
 
 
-<label>Enter user email</label>
-<input type="text"/>
+<label asp-for="ReciverEmail" >Enter user email</label>
+<input asp-for="ReciverEmail" type="text"/>
 
 <button>Send Request</button>
 
 
 </form>
-
+</div>
 
