--- a/File-Sharing/Views/Friendship/SendRequest.cshtml
+++ b/File-Sharing/Views/Friendship/SendRequest.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Send Friendship Request";
 }
 
+<h1>Send Friendship Request</h1>
+
 @Html.Partial("_Sidebar")
 
 <div class="side-bar-content">
