--- a/File-Sharing/wwwroot/css/navbar.css
+++ b/File-Sharing/wwwroot/css/navbar.css
@@ -47,11 +47,14 @@
     color: black;
     padding: 1rem 1rem;
     border: none;
+    width: min(150px);
+
 }
 
 .dropdown {
     position: relative;
     display: inline-block;
+
 }
 
 .dropdown-content {
@@ -68,6 +71,7 @@
         padding: 12px 16px;
         text-decoration: none;
         display: block;
+
     }
 
         .dropdown-content a:hover {
