--- a/File-Sharing/Views/Document/Index.cshtml
+++ b/File-Sharing/Views/Document/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@model IEnumerable<MyFile>
 @{
     ViewData["Title"] = "My Files";
-
 }
 
 
@@ -9,29 +8,19 @@
 
 @if(@Model.Count() > 0)
 {
-    
-<table>
-    <tr>
-        <th>ID</th>
-        <th>File Name</th>
-        <th>File Size</th>
-        <th>Uploaded Date</th>
-        <th> </th>
-
-    </tr>
-
     @foreach (MyFile myFile in @Model)
     {
-        <tr>
 
-            <th>@myFile.DocumentId</th>
-            <th>@myFile.FileName</th>
-            <th>@myFile.FileSize</th>
-            <th>@myFile.UploadDate</th>
-            <th> <a asp-controller="DocumentAccess" asp-action="Index" asp-route-fileId=@myFile.DocumentId>manage</a> </th>
-        </tr>
+    <div class="my-file-container">
+        <p class="file-name">@myFile.FileName</p>
+        <p class="">@myFile.FileSize</p>
+        <p class=""> @myFile.UploadDate</p>
+        <a asp-controller="DocumentAccess" asp-action="Index" asp-route-fileId=@myFile.DocumentId>manage</a>
+
+    </div>
+
+
     }
 
-
-</table>
 }
+
