--- a/File-Sharing/Views/Shared/_Navbar.cshtml
+++ b/File-Sharing/Views/Shared/_Navbar.cshtml
@@ -19,9 +19,9 @@
         <div class="navbar">
             <ul class="navbar-table-left">
                 <li><a class="nav-button" href="#">Dashboard</a></li> 
-                <li><a class="nav-button" href="#">Inbox</a></li>
+                <li><a class="nav-button" asp-controller="DocumentAccess" asp-action="SharingWithMe">Inbox</a></li>
                 <li><a class="nav-button" asp-controller="Document" asp-action="index">My Files</a></li> 
-                <li><a class="nav-button" href="#">Shared</a></li> 
+                <li><a class="nav-button" asp-controller="DocumentAccess" asp-action="Shared">Shared</a></li> 
                 <li><a class="nav-button" asp-controller="Friendship" asp-action="Index">Friends</a></li> 
                 <li><a class="nav-button" asp-controller="Document" asp-action="Upload">Upload</a></li> 
 
