--- a/File-Sharing/wwwroot/css/site.css
+++ b/File-Sharing/wwwroot/css/site.css
@@ -47,3 +47,20 @@ body {
     border: 1px solid #777;
 
 }
+
+
+
+.my-file-container{
+    box-sizing:content-box;
+    height: 250px;
+    width: 700px;
+    background-color:rgb(184, 141, 141);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    padding:10px;
+}
+
+.file-name{
+
+}
