--- a/File-Sharing/Views/DocumentAccess/Shared.cshtml
+++ b/File-Sharing/Views/DocumentAccess/Shared.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<MyFile>;
+﻿
+@using X.PagedList
+@using X.PagedList.Mvc.Bootstrap4.Core
+@using X.PagedList.Mvc.Core
+@model IPagedList<MyFile>;
 
 @{
 
@@ -19,6 +23,7 @@
         </div>
     }
 
+  @Html.PagedListPager((IPagedList)Model, page => Url.Action("Shared", new { page }), Bootstrap4PagedListRenderOptions.OnlyShowFivePagesAtATime)
 
 }else {
 
