--- a/File-Sharing/Views/Friendship/GetReceivedRequests.cshtml
+++ b/File-Sharing/Views/Friendship/GetReceivedRequests.cshtml
@@ -1,5 +1,8 @@
 ﻿@using File_Sharing.Models
-@model IEnumerable<Request>
+@using X.PagedList
+@using X.PagedList.Mvc.Bootstrap4.Core
+@using X.PagedList.Mvc.Core
+@model IPagedList<Request>
 
 
 @{
@@ -36,8 +39,10 @@
     }
 
 </table>
-}
+
+}   
 
 </div>
+       @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }), Bootstrap4PagedListRenderOptions.OnlyShowFivePagesAtATime)
 
        
