--- a/File-Sharing/Views/Document/Index.cshtml
+++ b/File-Sharing/Views/Document/Index.cshtml
@@ -34,8 +34,8 @@
 
         <div class="button-conteiner">
         <a class="general-button" id ="manage-button"  asp-controller="DocumentAccess" asp-action="Index" asp-route-fileId=@myFile.DocumentId>Manage</a>
-        <a class="general-button" id ="manage-button"  asp-controller="DocumentAccess" asp-action="Index" asp-route-fileId=@myFile.DocumentId>Download</a>
-        <a class="general-button" id ="manage-button"  asp-controller="DocumentAccess" asp-action="Index" asp-route-fileId=@myFile.DocumentId>Delete</a>
+        <a class="general-button" id ="manage-button"  asp-controller="Document" asp-action="Download" asp-route-documentId=@myFile.DocumentId>Download</a>
+        <a class="general-button" id ="manage-button"  asp-controller="Document" asp-action="Delete" asp-route-fileId=@myFile.DocumentId>Delete</a>
 
     
     </div>
