--- a/File-Sharing/Views/DocumentAccess/Shared.cshtml
+++ b/File-Sharing/Views/DocumentAccess/Shared.cshtml
@@ -17,10 +17,30 @@
 {
     @foreach (MyFile myFile in Model)
     {
+ 
         <div class="my-file-container">
-            <p> Name: @myFile.FileName </p>
-            <p> Size: @myFile.FileSize </p>
+        <table class ="vertical-table">
+            <tr>
+                <th>File Name: </th>
+                <td>@myFile.FileName</td>
+            </tr>
+            <tr>
+                <th>File Size: </th>
+                <td>@myFile.FileSize Mb</td>
+            </tr>
+            <tr>
+                <th>Upload Date: </th>
+                <td>@myFile.UploadDate</td>
+            </tr>
+        </table>
+        <div class="button-conteiner">
+            <a class="general-button" id="manage-button" asp-controller="DocumentAccess" asp-action="Index" asp-route-fileId="@myFile.DocumentId">Manage</a>
+
         </div>
+
+        </div>
+
+
     }
 
   @Html.PagedListPager((IPagedList)Model, page => Url.Action("Shared", new { page }), Bootstrap4PagedListRenderOptions.OnlyShowFivePagesAtATime)
