--- a/File-Sharing/Views/Home/Index.cshtml
+++ b/File-Sharing/Views/Home/Index.cshtml
@@ -2,7 +2,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p> To be able to use the system you need an account.</a>.</p>
+<div>
+ 
+    <div class="picture">
+
+        <img src="~/2.jpg" class="p"/>
+
+    </div>
+
+    <div class="ad">
+        <p>File Sharing app offers 1GB of storage space for everyone. 
+            You can use this storage space to share files with your 
+            friends after you become a member of the site.</p>
+
+    </div>
 </div>
