--- a/File-Sharing/wwwroot/css/site.css
+++ b/File-Sharing/wwwroot/css/site.css
@@ -156,3 +156,27 @@ th{
     margin-top: 120px;
 }
 
+.picture {
+    display:inline-flex;
+    margin-left: 5%;
+}
+
+.p {
+    margin-left:auto;
+    margin-right:auto;
+    height: 320px;
+    width: 480px;
+    font-size: 35px;
+}
+
+.ad {
+    
+    float:right;
+    display:inline-flex;
+    height: 320px;
+    width: 520px;
+}
+.ad p{
+    margin-top:15%;
+    font-size:25px;
+}
