--- a/File-Sharing/Views/Home/Index.cshtml
+++ b/File-Sharing/Views/Home/Index.cshtml
@@ -2,18 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div>
- 
+<div class="welcome-container">
+ <h1 class="welcome-h1">Welcome To File Sharing</h1>
+
     <div class="picture">
-
+        <figure></figure>
         <img src="~/2.jpg" class="p"/>
-
-    </div>
-
-    <div class="ad">
-        <p>File Sharing app offers 1GB of storage space for everyone. 
+         <p class="img-text">File Sharing app offers 1GB of storage space for everyone. 
             You can use this storage space to share files with your 
             friends after you become a member of the site.</p>
 
     </div>
+
 </div>
+
+
+
+
+
