--- a/File-Sharing/Views/DocumentAccess/Index.cshtml
+++ b/File-Sharing/Views/DocumentAccess/Index.cshtml
@@ -14,7 +14,7 @@
     sharewith.DocumentId = fileId;
 }
 
-<p>Manage</p>
+<h3>Manage</h3>
    <div class="general-container">
 @if ( @Model.Count() > 0 )
 {
