--- a/File-Sharing/wwwroot/css/site.css
+++ b/File-Sharing/wwwroot/css/site.css
@@ -15,6 +15,7 @@ html {
 
 body {
   margin-bottom: 60px;
+  min-width:800px;
 }
 
 .conteiner {
@@ -156,27 +157,29 @@ th{
     margin-top: 120px;
 }
 
+.welcome-container{
+    min-width:800px;
+}
+
 .picture {
     display:inline-flex;
-    margin-left: 5%;
+    margin-left: 0,4em;
 }
 
 .p {
-    margin-left:auto;
-    margin-right:auto;
     height: 320px;
     width: 480px;
     font-size: 35px;
 }
 
-.ad {
-    
-    float:right;
-    display:inline-flex;
-    height: 320px;
-    width: 520px;
+.welcome-h1{
+    margin-left:35%;
+    margin-right:25%;
+    font-size:2em;
 }
-.ad p{
-    margin-top:15%;
-    font-size:25px;
+
+
+.img-text {
+    margin-left: 1em;
+    font-size: 1.7em;
 }
